--- a/index.html
+++ b/index.html
@@ -6,28 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/reset.css">
+    <!-- <link rel="stylesheet" href="styles/reset.css"> -->
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/home.css">
-    <title>Document</title>
+    <title>BurnersDen!</title>
 </head>
 
 <body>
     <header>
         <div class="gutter-right logo">
-            <img src="assets/big-logo.png"/>
+            <img src=""/>
         </div>
     </header>
     <main>
         <section class="main-section">
-            
+            <!-- img here -->
+            <img class="" src="http://www.fillmurray.com/200/300" alt="" title="" height="" width="" />
+            <!-- <a href="products">Get Schwag!</a> -->
+            <!-- <link to products page here> -->
         </section>
     </main>
     <footer>
-        <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
+
     </footer>
 
     <script type="module" src="app.js"></script>
 </body>
 
 </html>
+
