Home page with pic linking and backlinking to products page

--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
     </header>
     <main>
         <section class="main-section">
+
             <!-- img here -->
-            <img class="" src="http://www.fillmurray.com/200/300" alt="" title="" height="" width="" />
-            <!-- <a href="products">Get Schwag!</a> -->
-            <!-- <link to products page here> -->
+            <img class="" src="./assets/burner-den-pic.jpg" alt="" 
+            title="" height="450" width="" />
+            
+            <nav>
+                <!-- <link to products page here> -->
+                <a href="./products/products.html">Get Schwag!</a>
+            </nav>
+
         </section>
     </main>
     <footer>
