--- a/products/products.html
+++ b/products/products.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/home.css">
+    <title>BurnersDen!</title>
     <title>Burner Den Posters!</title>
 </head>
+
 <body>
     <header>
+        <nav>
+            <a href="../">Home</a>
 
+            <!-- link to cart page here -->
+            <!-- <a href="../my-cart" -->
+           
+        </nav>
     </header>
     <main>
         <section id="main-section">
