product data with images added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" href="styles/reset.css"> -->
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/home.css">
-    <title>BurnersDen!</title>
+    <title>Welcome to the Burner Den</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
             
             <nav>
                 <!-- <link to products page here> -->
-                <a href="./products/products.html">Get Schwag!</a>
+                <a href="./products/bmMarket.html">Get Schwag!</a>
             </nav>
 
         </section>
