added cartPage.html with proper linking; all pages linked

--- a/products/bmMarket.html
+++ b/products/bmMarket.html
@@ -11,6 +11,7 @@
     <title>Burner Den Posters!</title>
     <nav>
         <a href="../">Home</a>
+        <a href="../shoppingCart/cartPage.html">Cart</a>
         <!-- link to cart page here -->
         <!-- <a href="../my-cart" -->
     </nav>
@@ -41,40 +42,7 @@
                     <input type="number" name="quantity" value="num1"/>
                     <button id="add-button">Add to Cart</button> -->
                 </ul>
-            <break />
-                
-            <!-- place product 2 -->    
-                <!-- img here-->
-                <!-- name -->
-                <!-- description? -->
-                <!-- price -->
-                <!-- input for quantity - set to a number -->
-                <!-- Add Button (product whose value is the product id) -->
-
-            <!-- place product 3 -->    
-                <!-- img here-->
-                <!-- name -->
-                <!-- description? -->
-                <!-- price -->
-                <!-- input for quantity - set to a number -->
-                <!-- Add Button (product whose value is the product id) -->
-
-            <!-- place product 4 -->    
-                <!-- img here-->
-                <!-- name -->
-                <!-- description? -->
-                <!-- price -->
-                <!-- input for quantity - set to a number -->
-                <!-- Add Button (product whose value is the product id) -->
-
-            <!-- place product 5 -->    
-                <!-- img here-->
-                <!-- name -->
-                <!-- description? -->
-                <!-- price -->
-                <!-- input for quantity - set to a number -->
-                <!-- Add Button (product whose value is the product id) -->
-
+                    <break />
             </div>
 
         </section>
