design cart skeleton in place

--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
 </head>
 
 <body>
-    <header>
-        <div class="gutter-right logo">
-            <img src=""/>
-        </div>
+    <header style="font-display: black">
+        Burner Den Marketplace
     </header>
     <main>
         <section class="main-section">
