--- a/products/bmMarket.html
+++ b/products/bmMarket.html
@@ -26,7 +26,7 @@
                 </div>
             </section>
         </main>
-        <script type="module" src="./renderPosters.js"></script>
+        <script type="module" src="./products.js"></script>
     </body>
 </html>
 
