getCart function added to utils with pathing updates

--- a/shoppingCart/cartPage.html
+++ b/shoppingCart/cartPage.html
@@ -24,45 +24,42 @@
             </nav>
         </div>
     </header>
-    
-    <main>
-        <section class="main-section">
-            <table>
-                <thead>
-                    <tr>
-                        <th class="cart-table">Items</th>
-                        <th>Amount</th>
-                        <th>Cost</th>
-                        <th>Total</th>
-                    </tr>
-                </thead>
-            
-                <tbody>
-                    <tr>
-                        <td class="chosen-item"></td>
-                        <td></td>
-                        <td></td>
-                        <td class="line-item-total"></td>
-                    </tr>
-                </tbody>
-
-                <tfoot>
-                    <tr>
-                        <th></th>
-                        <th></th>
-                        <th>Order Total</th>
-                        <th id="order-total-cell"></th>
-                    </tr>
-                </tfoot>
-            </table>
-                <p class="order-now-container">
-                    <button>Place Order</button>
-                </p>
-        </section>
-    </main>
-        <footer>
-        </footer>
-    <script type="module" src="./shoppingCart.js"></script>
+        <main>
+            <section class="main-section">
+                <table>
+                    <thead>
+                        <tr>
+                            <th class="cart-table">Items</th>
+                            <th>Amount</th>
+                            <th>Cost</th>
+                            <th>Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="chosen-item"></td>
+                            <td></td>
+                            <td></td>
+                            <td class="line-item-total"></td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <th></th>
+                            <th></th>
+                            <th>Order Total</th>
+                            <th id="order-total-cell"></th>
+                        </tr>
+                    </tfoot>
+                </table>
+                    <p class="order-now-container">
+                        <button>Place Order</button>
+                    </p>
+            </section>
+        </main>
+    <footer>
+    </footer>
+    <script type="module" src="./shopping-cart.js"></script>
 </body>
 
 </html>
