--- a/shoppingCart/cartPage.html
+++ b/shoppingCart/cartPage.html
@@ -53,7 +53,7 @@
                     </tfoot>
                 </table>
                     <p class="order-now-container">
-                        <button>Place Order</button>
+                        <button id="place-order-button">Place Order</button>
                     </p>
             </section>
         </main>
