Order Placed button functioning and redirecting home when done

--- a/products/bmMarket.html
+++ b/products/bmMarket.html
@@ -22,7 +22,9 @@
             <section id="main-section">
                 <div id="products-container">
                     <ul id="posters"></ul>
-                        <break />
+                    <!-- INPUT for number (stretch goal) start here?  -->
+                        <!-- <input type="number"> -->
+                    <break />
                 </div>
             </section>
         </main>
